remove constructor call
Signed-off-by: Rohit Satya <work.rohitsatya@gmail.com>